<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".activities.WriteActivity">

    <EditText
        android:id="@+id/edt_note_title"
        style="@style/edt_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/note_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_category"
        style="@style/spinner_style"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imgb_add_category"
        app:layout_constraintStart_toStartOf="@+id/edt_note_title"
        app:layout_constraintTop_toBottomOf="@+id/edt_note_title" />

    <ImageButton
        android:id="@+id/imgb_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_category"
        app:layout_constraintEnd_toEndOf="@+id/edt_note_title"
        app:layout_constraintTop_toTopOf="@+id/spinner_category"
        app:srcCompat="@android:drawable/ic_input_add" />

    <EditText
        android:id="@+id/edt_note"
        style="@style/edt_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="top|center_vertical"
        android:hint="@string/note"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="@+id/edt_note_title"
        app:layout_constraintStart_toStartOf="@+id/edt_note_title"
        app:layout_constraintTop_toBottomOf="@+id/spinner_category" />


    <Button
        android:id="@+id/btn_save"
        style="@style/btn_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="@+id/btn_cancel"
        app:layout_constraintStart_toStartOf="@+id/btn_cancel" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/btn_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>